GNOME Bugzilla – Bug 746512
oggdemux: fix compiler warning
Last modified: 2015-03-23 08:15:50 UTC
Created attachment 299923 [details] [review] oggdemux: fix compiler warning Compiler warning format specifies type for printing debug log. I am trying to compile it on osx, and It cause a build error. So I fixed this compile warning. gstoggdemux.c:1233:11: error: format specifies type 'long' but the argument has type 'ogg_int64_t' (aka 'long long') [-Werror,-Wformat] granule); ^~~~~~~ /Users/chul/work/github/jhbuild-gstreamer/install/include/gstreamer-1.0/gst/gstinfo.h:861:96: note: expanded from macro 'GST_DEBUG_OBJECT' #define GST_DEBUG_OBJECT(obj,...) GST_CAT_LEVEL_LOG (GST_CAT_DEFAULT, GST_LEVEL_DEBUG, obj, __VA_ARGS__) ^ /Users/chul/work/github/jhbuild-gstreamer/install/include/gstreamer-1.0/gst/gstinfo.h:541:31: note: expanded from macro 'GST_CAT_LEVEL_LOG' (GObject *) (object), __VA_ARGS__); \ ^ gstoggdemux.c:1255:15: error: format specifies type 'long' but the argument has type 'ogg_int64_t' (aka 'long long') [-Werror,-Wformat] duration); ^~~~~~~~ /Users/chul/work/github/jhbuild-gstreamer/install/include/gstreamer-1.0/gst/gstinfo.h:861:96: note: expanded from macro 'GST_DEBUG_OBJECT' #define GST_DEBUG_OBJECT(obj,...) GST_CAT_LEVEL_LOG (GST_CAT_DEFAULT, GST_LEVEL_DEBUG, obj, __VA_ARGS__) ^ /Users/chul/work/github/jhbuild-gstreamer/install/include/gstreamer-1.0/gst/gstinfo.h:541:31: note: expanded from macro 'GST_CAT_LEVEL_LOG' (GObject *) (object), __VA_ARGS__); \ ^ gstoggdemux.c:1262:15: error: format specifies type 'long' but the argument has type 'ogg_int64_t' (aka 'long long') [-Werror,-Wformat] granule); ^~~~~~~ /Users/chul/work/github/jhbuild-gstreamer/install/include/gstreamer-1.0/gst/gstinfo.h:860:95: note: expanded from macro 'GST_INFO_OBJECT' #define GST_INFO_OBJECT(obj,...) GST_CAT_LEVEL_LOG (GST_CAT_DEFAULT, GST_LEVEL_INFO, obj, __VA_ARGS__) ^ /Users/chul/work/github/jhbuild-gstreamer/install/include/gstreamer-1.0/gst/gstinfo.h:541:31: note: expanded from macro 'GST_CAT_LEVEL_LOG' (GObject *) (object), __VA_ARGS__); \ ^ \
Created attachment 299924 [details] [review] oggdemux: fix compiler warning
commit b45941219e886eb23002bb3969081bdd60d85106 Author: Wonchul Lee <chul0812@gmail.com> Date: Fri Mar 20 17:45:03 2015 +0900 oggdemux: Fix compiler warning gstoggdemux.c:1233:11: error: format specifies type 'long' but the argument has type 'ogg_int64_t' (aka 'long long') [-Werror,-Wformat] granule); ^~~~~~~ https://bugzilla.gnome.org/show_bug.cgi?id=746512